--- a/Discord.Core.csproj
+++ b/Discord.Core.csproj
@@ -7,22 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Blaczko.Core\**" />
-    <EmbeddedResource Remove="Blaczko.Core\**" />
-    <None Remove="Blaczko.Core\**" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Blaczko.Core" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="Blaczko.Core\Blaczko.Core.csproj" />
   </ItemGroup>
 
 </Project>
